[package]
name = "rust_tuber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
read-process-memory = "0.1.4"
process_list = "0.2.1"
winapi = { version = "0.3", features = ["errhandlingapi","wincontypes"] }
sysinfo = "0.24.0"
byteorder = "1.2.2"
image = "0.24.2"
# png = "0.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1.0"
nannou = "0.17"
serialport = "4.2.0"

[profile.release]
# lto = true
codegen-units = 1
debug = false