[package]
name = "rust_tuber"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
read-process-memory = "0.1.6"
process_list = "0.2.1"
sysinfo = "0.24.0"
byteorder = "1.2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1.0"
serialport = "4.2.0"
itertools = "0.10.4"

[profile.release]
# lto = true
codegen-units = 1
debug = false

[dependencies]
minidom = "0.15.0"
colored = "2"
ratelimit = "0.4.4"
walkdir = "2.4.0"
roxmltree = "0.18.0"
flate2 = "1.0.27"
plotters = "0.3.5"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.27.0"
mcp2221 = "0.1.1"
embedded-hal = "0.2.7"
pwm-pca9685 = "0.3.1"
shared-bus = "0.3.0"
regex = "1.9.5"
# process-memory = "0.5.0"
# serde-xml-rs = "0.6.0"

# [patch.crates-io]
# ntapi = "0.4.1"
